--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" >
 </script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/tipped/4.0.10/js/tipped/tipped.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/buttons.css@1.1.3"/>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/buttons.css/1.1.3/buttons.min.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/tipped/4.0.10/css/tipped/tipped.css"/>
 
 <style>
