--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@ width:auto;
 
 <script>
   $(document).ready(function() {
-    Tipped.create(a_predio, "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc", {size: 'large' });
-  });
+    Tipped.create(a_predio, "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc", {behavior: 'mouse', size: 'large', container: $('#svgmapa')[0] });
     $(document).ready(function() {
     Tipped.create(a_quadra, "Quadra", { behavior: 'mouse', size: 'large' });
   });
