--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ width:auto;
 
 <script>
   $(document).ready(function() {
-    Tipped.create(a_predio, "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc", {container: 'svgmapa',size: 'large'});
+    Tipped.create(a_predio, "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc", {showOn: 'click', hideOn: 'click', hideOnClickOutside: true ,size: 'large'});
 	  });
 	
     $(document).ready(function() {
