--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ width:auto;
 
 <script>
   $(document).ready(function() {
-    Tipped.create(a_predio, "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc", {showOn: 'click', hideOn: 'click', hideOnClickOutside: true ,size: 'large'});
+    Tipped.create(a_predio, "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc", {showOn: 'click', hideOn: 'click', hideOnClickOutside: 'true', size: 'large'});
     Tipped.create(a_quadra, "Quadra", { behavior: 'mouse', size: 'large' });
     Tipped.create(a_estacionamento, "Estacionamento", { behavior: 'mouse', size: 'large' });
     Tipped.create(a_portaria, "Portaria", { behavior: 'mouse', size: 'large' });
