--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ width:auto;
 <script>
   $(document).ready(function() {
 	  
-	  $(a_predio).qtip({
+	  $('a_predio').qtip({
                     content: {
                         text: "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc",
 			    style: 'qtip-dark',
