--- a/index.html
+++ b/index.html
@@ -184,11 +184,8 @@ width:auto;
   $(document).ready(function() {
 	  
 	  $(a_predio).qtip({
-                    content: {
-                        text: "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc"
-		    },
-			    style: 'qtip-dark',
-		    
+                    content: "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc".		 
+		    style: 'qtip-dark',    
 			    
 		  position: {
              target: 'mouse', 
