--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ width:auto;
   $(document).ready(function() {
 	  
 	  $(a_predio).qtip({
-                    content: "Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc".		 
+                    content: 'Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc',		 
 		    style: 'qtip-dark',    
 			    
 		  position: {
