--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ width:auto;
 <script>
   $(document).ready(function() {
 	  
-	  $(document.getElementById('a_predio')).qtip({
+	  $(document.getElementById('a_quadra')).qtip({
 		  content: {
 		text: 'Prédio Principal <br> Contém todas as salas de aula, laboratórios, administração etc'
 	},
