--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ width:auto;
 <script>
  $(document).ready(function()
  {
-     $('#a_campus').qtip({
+     $('#a_predio').qtip({
          content: 'Mouse tracking!',
          style: {
 		classes: 'qtip-dark qtip-shadow qtip-rounded'
