--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/buttons/2.0.0/js/buttons.js" >
 </script>
-<script type="text/javascript" src="http://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.js"></script>
+<script type="text/javascript" src="http://qtip2.com/v/stable/jquery.qtip.js"></script>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/buttons/2.0.0/css/buttons.min.css"/>
-<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.css"/>
+<link rel="stylesheet" type="text/css" href="http://qtip2.com/v/stable/jquery.qtip.css"/>
 
 <style>
 html, body {
